--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,6 +19,7 @@ body {
   --color-grey: #8f97a6;
   --color-grey-2: #68707d;
   --color-grey-3: #131417;
+  --color-grey-4: #22252b;
 
   --color-stroke: #68707d;
   --color-stroke-2: #1f2530;
