--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,3 +5,13 @@
 body {
   font-family: Arial, Helvetica, sans-serif;
 }
+
+input[type='number'].no-spinner::-webkit-outer-spin-button,
+input[type='number'].no-spinner::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+input[type='number'].no-spinner {
+  -moz-appearance: textfield;
+}
