review-positions and colelct fess modal

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -20,6 +20,7 @@ body {
   --color-grey-2: #68707d;
   --color-grey-3: #131417;
   --color-grey-4: #22252b;
+  --color-grey-5: #0a0e10;
 
   --color-stroke: #68707d;
   --color-stroke-2: #1f2530;
