fixes filter table and positions

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -39,6 +39,7 @@ input[type='number'].no-spinner {
   --color-primary-2: #8d6af5;
   --color-primary-3: #926ef5;
   --color-primary-4: #9c4cfc;
+  --color-primary-5: #b89fff;
 
   --color-secondary: #926ef5;
   --color-secondary-2: #49b063;
