--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -23,6 +23,10 @@ input[type='number'].no-spinner {
   --color-background-4: #1f2125;
   --color-background-5: #1f2530;
   --color-background-6: #060708;
+  --color-background-7: #02040a;
+  --color-background-8: #0d1117;
+  --color-background-9: #120d25;
+  --color-background-10: #161b27;
 
   --color-black: #000000;
 
