--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -29,6 +29,8 @@ input[type='number'].no-spinner {
   --color-background-10: #161b27;
   --color-background-11: #623aff;
   --color-background-12: #0d1117;
+  --color-background-13: #211c55;
+  --color-background-14: #161b27;
 
   --color-black: #000000;
 
