--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -31,6 +31,11 @@ input[type='number'].no-spinner {
   --color-background-12: #0d1117;
   --color-background-13: #211c55;
   --color-background-14: #161b27;
+  --color-background-15: #161b27;
+  --color-background-16: #211c55;
+  --color-background-17: #161b27;
+  --color-background-18: #0d1117;
+  --color-background-19: #161b27;
 
   --color-black: #000000;
 
@@ -46,8 +51,12 @@ input[type='number'].no-spinner {
   --color-stroke-4: #1f2530;
   --color-stroke-5: #1f2530;
   --color-stroke-6: #623aff;
+  --color-stroke-7: #2f343e;
+  --color-stroke-8: #7f5ffa;
 
-  --color-primary: #4627fb;
+  --color-primary: #68707d;
+
+  --color-primary-1: #4627fb;
   --color-primary-2: #8d6af5;
   --color-primary-3: #926ef5;
   --color-primary-4: #9c4cfc;
