--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -141,3 +141,12 @@ input[type='number'].no-spinner {
     left: 100%;
   }
 }
+
+* {
+  scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none; /* IE and Edge */
+}
+
+*::-webkit-scrollbar {
+  display: none; /* Chrome, Safari, Opera */
+}
