--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -47,6 +47,7 @@ input[type='number'].no-spinner {
   --color-background-20: #4425fb;
   --color-background-21: #623aff;
   --color-background-23: #22252b;
+  --color-background-24: #3e14cb;
 
   --color-black: #000000;
 
